Fix header icon and text (#41)
* Ensure header logo doesn't get obscured

* Ensure header logo links back to Spanish page

* Fix long overlapping text on smaller screens

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -42,10 +42,11 @@ a.logo {
 
 .logo__icon {
   height: 58px;
-  width: 58px;
+  min-width: 58px;
   background-image: url(../img/new-site/logo3.png);
   background-size: 58px;
   background-position: left;
+  background-repeat: no-repeat;
 }
 
 .logo_text {
@@ -250,11 +251,6 @@ li.social-link a {
 
   .nav {
     display: none;
-  }
-
-  a.logo,
-  .shares {
-    width: auto;
   }
 }
 
